[project]
name = "toolcryo"
version = "0.1.0"
description = "Self-supervised cryo-ET denoising using Equivariant Imaging (EI)"
readme = "README.md"
authors = [
    { name = "PHAN Triem", email = "triemphandinh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "mrcfile",
    "pyyaml",
    "submitit",
    "torch",
    "deepinv",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolcryo"]
