[project]
name = "toolcryo"
version = "0.1.0"
description = "Self-supervised cryo-ET denoising using Equivariant Imaging (EI)"
readme = "README.md"
authors = [
    { name = "PHAN Triem", email = "triemphandinh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "mrcfile",
    "pyyaml",
    "submitit",
    "torch",
    "deepinv @ git+https://github.com/deepinv/deepinv.git@refs/pull/1088/head",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/toolcryo"]
